[gd_scene load_steps=17 format=3 uid="uid://cdr8rck7r5wts"]

[ext_resource type="Script" uid="uid://5arw325siv8x" path="res://items/guns/_generics/gun.gd" id="1_wwnuv"]
[ext_resource type="Texture2D" uid="uid://xnd37rmkthv" path="res://assets/sprites/items/gun-firing.png" id="2_aj33k"]
[ext_resource type="Texture2D" uid="uid://c6s0dhmit678" path="res://assets/sprites/items/gun.png" id="3_0sfdt"]
[ext_resource type="PackedScene" uid="uid://dokccb0wthmtb" path="res://items/guns/_generics/aim_guides.tscn" id="5_unooq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u6oin"]
atlas = ExtResource("2_aj33k")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3reau"]
atlas = ExtResource("2_aj33k")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ajgoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6oin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3reau")
}],
"loop": false,
"name": &"firing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0sfdt")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_doari"]
offsets = PackedFloat32Array(0, 0.0649351, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.636364, 0.636364, 0.636364, 0.636364, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_737s3"]
gradient = SubResource("Gradient_doari")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.866973, 0.169725)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_gclat"]
polygon = PackedVector2Array(0, -38, 0, 40, -4, 41, -4, -42)

[sub_resource type="Animation" id="Animation_1pr87"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ocvq5"]
resource_name = "flash"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 0.0625),
"update": 0,
"values": [5.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_30b3j"]
_data = {
&"RESET": SubResource("Animation_1pr87"),
&"flash": SubResource("Animation_ocvq5")
}

[sub_resource type="Gradient" id="Gradient_sbo7a"]
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkaqw"]
bg_color = Color(0.6, 0.6, 0.6, 0.117647)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iaigw"]
bg_color = Color(1, 1, 1, 1)

[node name="Gun" type="Node2D"]
script = ExtResource("1_wwnuv")

[node name="DebugPanel" type="ColorRect" parent="."]
visible = false
light_mask = 4
visibility_layer = 4
offset_top = -152.0
offset_right = 325.0
offset_bottom = 117.0
color = Color(0.242655, 0.707726, 0.344725, 1)

[node name="PivotPoint" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="Sprite" type="AnimatedSprite2D" parent="PivotPoint"]
unique_name_in_owner = true
position = Vector2(24, -3)
sprite_frames = SubResource("SpriteFrames_ajgoq")
animation = &"firing"
autoplay = "idle"

[node name="ShootingPoint" type="Marker2D" parent="PivotPoint/Sprite"]
unique_name_in_owner = true
position = Vector2(8, -3)

[node name="PointLight2D" type="PointLight2D" parent="PivotPoint/Sprite/ShootingPoint"]
modulate = Color(1, 1, 1, 0)
light_mask = 0
visibility_layer = 0
position = Vector2(2, 0)
scale = Vector2(0.680002, -0.2)
energy = 0.0
range_item_cull_mask = 5
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 38.1
shadow_item_cull_mask = 7
texture = SubResource("GradientTexture2D_737s3")
texture_scale = 2.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="PivotPoint/Sprite/ShootingPoint/PointLight2D"]
light_mask = 2
visibility_layer = 2
position = Vector2(-2, 0)
occluder = SubResource("OccluderPolygon2D_gclat")
occluder_light_mask = 2

[node name="Polygon2D" type="Polygon2D" parent="PivotPoint/Sprite/ShootingPoint/PointLight2D/LightOccluder2D"]
light_mask = 2
visibility_layer = 2
position = Vector2(0, 73.5)
scale = Vector2(1, 12.1667)
polygon = PackedVector2Array(0, -3, 0, -9, -4, -9, -4, -3)

[node name="MuzzleFlash" type="AnimationPlayer" parent="PivotPoint/Sprite/ShootingPoint/PointLight2D"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_30b3j")
}

[node name="RedDot" type="Line2D" parent="PivotPoint/Sprite/ShootingPoint"]
unique_name_in_owner = true
y_sort_enabled = true
points = PackedVector2Array(0, 0, 500, 0)
width = 0.8
default_color = Color(1, 0, 0, 0.458824)
gradient = SubResource("Gradient_sbo7a")

[node name="AimGuides" parent="PivotPoint/Sprite/ShootingPoint" instance=ExtResource("5_unooq")]
unique_name_in_owner = true

[node name="ShellEjectPoint" type="Marker2D" parent="PivotPoint/Sprite"]
unique_name_in_owner = true
position = Vector2(-3, -5)

[node name="CanvasGroup" type="CanvasGroup" parent="PivotPoint/Sprite"]
unique_name_in_owner = true
position = Vector2(-5, -16)

[node name="CooldownProgress" type="ProgressBar" parent="PivotPoint/Sprite/CanvasGroup"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.784314)
offset_left = -3.0
offset_top = 4.0
offset_right = 12.0
offset_bottom = 6.0
theme_override_styles/background = SubResource("StyleBoxFlat_vkaqw")
theme_override_styles/fill = SubResource("StyleBoxFlat_iaigw")
value = 30.52
show_percentage = false

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="animation_finished" from="PivotPoint/Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
